Bug #16438
closedCheck warning messages for Ruby 2.7
Description
Please check Ruby 2.7 new introduced warning messages.
- deprecation warning
def foo(**kw)
end
foo({}) #=> test.rb:4: warning: The last argument is used as the keyword parameter
# test.rb:1: warning: for `foo' defined here; maybe ** should be added to the call?
# deafult: on
def _1; end
#=> test.rb:1: warning: `_1' is used as numbered parameter
# deafult: on
# added at Today!!
def foo
proc.call #=> 1
end
foo{p 1}
#=>
# t.rb:2: warning: Capturing the given block using Kernel#proc is deprecated; use `&block` instead
# 1
# default: on
$; = //
#=> t.rb:1: warning: non-nil $; will be deprecated
$, = ''
#=> t.rb:2: warning: non-nil $, will be deprecated
# default: on
def foo
class << Object.new
yield
end
end
foo { p :ok } #=> warning: `yield' in class syntax will not be supported from Ruby 3.0.
# default: on
require 'open-uri'
open('http://atdot.net')
#=> test.rb:2: warning: calling URI.open via Kernel#open is deprecated, call URI.open directly or use URI#open
# default: on
- experimental feature
Updated by osyo (manga osyo) over 6 years ago
Updated by ko1 (Koichi Sasada) over 6 years ago
no warning¶
pls check current master.
Updated by osyo (manga osyo) over 6 years ago
pls check current master.
Sorry, became warning.
Updated by nobu (Nobuyoshi Nakada) over 6 years ago
- Status changed from Open to Closed
Applied in changeset git|a8bddb3a189545a2bef8ee7cffdb328d8de7974c.
Refined the warning message for numbered-parameter like variables
[Bug #16438]
Updated by ko1 (Koichi Sasada) over 6 years ago
At developer's meeting, the followings are proposed. They will be merged into Ruby 2.7 RC2.
def foo(**kw)
end
foo({})
# current:
#=> test.rb:4: warning: The last argument is used as the keyword parameter
# test.rb:1: warning: for `foo' defined here; maybe ** should be added to the call?
# modified (conclusion):
#=> test.rb:4: warning: The last argument is used as keyword parameters; maybe ** should be added to the call
# test.rb:1: warning: The called method `foo' is defined here
Updated by puchuu (Andrew Aladjev) over 6 years ago
Hello. I can't understand why setting OFS to not nil value was deprecated. I want to simulate print method behaviour and I am using $OUTPUT_FIELD_SEPARATOR between objects. Than I want to test this method, so I am settings OFS to not nil value in tests. Ruby 2.7.0 throws deprecated warning.
Updated by puchuu (Andrew Aladjev) over 6 years ago
I see the only one way to fix this deprecation. Change write(*objects) signature to print(*objects, field_separator: $OUTPUT_FIELD_SEPARATOR, record_separator: $OUTPUT_RECORD_SEPARATOR) and test print by passing separators directly. Will ruby change print signature in the same way?