Refined the warning message for $, and $;

[Bug #16438]